# peekr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/server/: Cargo.toml
crates/server/migrations/: 0001_init.sql  0002_hosts.sql
crates/server/src/: agents.rs  auth.rs  db.rs  lib.rs  main.rs
crates/server/tests/: api.rs
fixtures/: compose.yaml
server/: Cargo.toml
server/src/: db.rs  lib.rs  main.rs
server/tests/: api.rs
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.vue  types.ts
web/src/components/: AppSidebar.vue  ContainerRow.vue  HostStats.vue  HostSwitcher.vue  LogPane.vue  StatsBar.vue
web/src/components/ui/chart/: ChartLegendContent.vue  ChartTooltipContent.vue
web/src/components/ui/resizable/: ResizableHandle.vue
web/src/components/ui/sidebar/: SidebarProvider.vue  SidebarTrigger.vue
web/src/composables/: useAuth.ts  useHosts.ts  useLogStream.ts
web/src/lib/: group.test.ts  group.ts  logfmt.test.ts  logfmt.ts  merge.test.ts  merge.ts
web/src/router/: index.ts
web/src/views/: LoginView.vue  LogsView.vue
