[package]
name = "peekr-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "peekr"
path = "src/main.rs"

[features]
# Bundle web/dist into the binary. Build the frontend first, then build with
# this feature (the Docker image does both). Dev relies on the Vite proxy.
embed-ui = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
bollard = "0.21"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
axum-extra = { version = "0.10", features = ["cookie"] }
rand = "0.9"
time = "0.3"
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
  "cookies",
] }
